<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".CrimeFragment">

    <TextView
        android:id="@+id/crime_text_view1"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crime_title_label"
        app:layout_constraintBottom_toTopOf="@+id/crime_title_ed"
        app:layout_constraintStart_toEndOf="@+id/crime_photo_img"
        app:layout_constraintTop_toTopOf="@+id/crime_photo_img"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/crime_title_ed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/crime_title_hint"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/crime_photo_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/crime_photo_img"
        app:layout_constraintTop_toBottomOf="@id/crime_text_view1" />

    <TextView
        android:id="@+id/crime_text_view2"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/crime_details_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crime_camera_btn" />

    <Button
        android:id="@+id/crime_date_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/crime_text_view2"
        tools:text="14:20 TUESDAY 01/02/2020" />

    <CheckBox
        android:id="@+id/crime_solved_chk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crime_solved_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/crime_date_btn" />

    <Button
        android:id="@+id/crime_suspect_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/crime_suspect_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crime_solved_chk" />

    <Button
        android:id="@+id/crime_report_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/crime_report_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crime_suspect_btn" />

    <ImageView
        android:id="@+id/crime_photo_img"
        android:contentDescription="@string/crime_photo_no_image_description"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:scaleType="centerInside"
        android:cropToPadding="true"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/crime_camera_btn"
        android:contentDescription="@string/crime_camera_button_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:src="@drawable/ic_camera"
        app:layout_constraintEnd_toEndOf="@+id/crime_photo_img"
        app:layout_constraintStart_toStartOf="@+id/crime_photo_img"
        app:layout_constraintTop_toBottomOf="@+id/crime_photo_img" />

</androidx.constraintlayout.widget.ConstraintLayout>